# torrent_tools

./: .gitignore  .pre-commit-config.yaml  setup.cfg
clients/: deluge.py
feeds/: torrentpier.py  xbtit.py
torrent_feed/: main.py
utils/: cache.py  config.py
