[metadata]
name = xbtit_tools
version = 0.0.1
description = Collection of tools for XBTIT tracker system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/int3l/xbtit_tools
author = int3l
author_email = int3l@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    feedparser>=6.0.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    torrent_feed = torrent_feed.main:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
