[metadata]
name = torrent_tools
version = 0.0.1
description = Collection of tools for tracker systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/int3l/torrent_tools
author = int3l
author_email = int3l@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    aioconsole>=0.3.1
    aiohttp>=3.7.2
    chardet>=3.0.4
    deluge-client>=1.9.0
    feedparser>=6.0.2
    lxml>=4.6.1
    pathvalidate>=2.3.0
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    xbtit_feed = feeds.xbtit:main
    torrentpier_feed = feeds.torrentpier:main
    deluge-dl = clients.deluge:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
